# galaxy-engine-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  find-build-sources.zig  initialize.cmake  todo.txt
assets/: mvp.scene  test copy 2.scene  test.scene
assets/VT323/: bitmapinfo.txt
assets/shaders-es/: color.shader  fallback.shader  lighting_color.shader  lighting_tex.shader  text.shader  tint.shader
assets/shaders-gl/: color.shader  fallback.shader  lighting_color.shader  lighting_tex.shader  old_default.shader  text.shader  tint.shader
include/: pch.h
include/Galaxy/: callback.hpp  callback.inl  engine.hpp  event.hpp  event.inl  init.hpp  object.hpp  print.hpp  print.inl  types.hpp
include/Galaxy/Assets/: assets.hpp
include/Galaxy/Audio/: audio.hpp
include/Galaxy/ECS/: ecs.hpp  ecs.inl
include/Galaxy/Events/: callback.hpp  callback.inl  event.hpp  event.inl  timer.hpp
include/Galaxy/Input/: input.hpp  keycodes.hpp
include/Galaxy/Math/: binary.hpp  gmath.hpp  matrix.hpp  time.hpp  time.inl  vector.hpp
include/Galaxy/Networking/: networking.hpp
include/Galaxy/OS/: defines.hpp
include/Galaxy/Physics/: physics.hpp
include/Galaxy/Renderer/: camera.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp
include/Galaxy/Scene/: scene.hpp
include/Galaxy/UI/: font.hpp  group.hpp  image.hpp  text.hpp  window.hpp
public/: CMakeLists.txt  pre-module.js
src/: callback.cpp  debug.hpp  engine.cpp  event.cpp  gldebug.hpp  init.cpp  internalinit.hpp  main.cpp  object.cpp  pch.h  prototype.txt
src/Assets/: asset.cpp
src/Audio/: audio.cpp
src/ECS/: ecs.cpp
src/Events/: frameQueuer.cpp  frameQueuer.hpp  init.cpp  timer.cpp
src/Input/: input.cpp
src/Math/: binary.cpp  internaltime.hpp  math.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp  time.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/Networking/: client.cpp  internalnet.hpp  server.cpp  shared.cpp
src/OS/Apple/: file_handler.mm
src/OS/IOS/: safe_area.mm
src/Physics/: combinations.cpp  combinations.hpp  cube.cpp  rigidbody.cpp  sphere.cpp
src/Renderer/: buffer.hpp  camera.cpp  indexbuffer.cpp  internal.hpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  vertexarray.cpp  vertexbuffer.cpp  vertexlayout.cpp
src/Scene/: scene.cpp  scene_parser.cpp
src/UI/: font.cpp  group.cpp  image.cpp  text.cpp  uiobject.cpp  uiobject.hpp
